--- a/csirt.divd.nl/_layouts/bio.html
+++ b/csirt.divd.nl/_layouts/bio.html
@@ -3,7 +3,7 @@ layout: default
 ---
 <h1>{{ page.author }}</h1>
 
-<small><a href='#english'>English below</a></small>
+<small><a href="#english">English below</a></small>
 
 <br>
 <br>
