--- a/csirt.divd.nl/_layouts/cve.html
+++ b/csirt.divd.nl/_layouts/cve.html
@@ -28,7 +28,7 @@ layout: default
 		</tr>
 		{% if page.reseachers %}
 			<tr>
-				<td> Additional researcher(s) </td>
+				<td> (Additional) researcher(s) </td>
 				<td>
 					<ul>
 						{% for r in page.reseachers -%}
@@ -44,13 +44,39 @@ layout: default
 				</td>
 			</tr>
 		{% endif %}
-		<tr>
-			<td> Product </td>
-			<td> {{ page.product }} </td>
-		</tr><tr>
-			<td>  Versions </td>
-			<td> {{ page.versions }} </td>
-		</tr>
+		{% if page.products[0] %}
+			<tr>
+				<td> Products </td>
+				<td> 
+					<ul>
+					{% for p in page.products %}
+						<li>{{ p }}</li>
+					{% endfor %} 
+				</td>
+			</tr>
+		{% else %}
+			<tr>
+				<td> Product </td>
+				<td> {{ page.products }} </td>
+			</tr>
+		{% endif %}
+		{% if page.versions[0] %}
+			<tr>
+				<td>  Versions </td>
+				<td> 
+					<ul>
+						{% for v in page.versions %}
+							<li>{{ v }}</li>
+						{% endfor %}
+					</ul>
+				</td>
+			</tr>
+		{% else %}
+			<tr>
+				<td>  Versions </td>
+				<td> {{ page.versions }} </td>
+			</tr>
+		{% endif %}
 		{% if page.owner != page.author -%}
 			<tr>
 				<td> Page author </td>
