--- a/_layouts/cve.html
+++ b/_layouts/cve.html
@@ -17,7 +17,7 @@ layout: default
 					{% for r in page.discovered_by -%}
 						<li>
 							{% if team contains r %}
-								<a href='https://www.divd.nl/team/{{ r | uri_escape }}/'>{{ r }}</a>
+								<a href='https://www.divd.nl/people/{{ r | uri_escape }}/'>{{ r }}</a>
 							{% else %}
 								{{ r }}
 							{% endif %}
@@ -34,7 +34,7 @@ layout: default
 						{% for r in page.researchers -%}
 							<li>
 								{% if team contains r %}
-									<a href='https://www.divd.nl/team/{{ r | uri_escape }}/'>{{ r }}</a>
+									<a href='https://www.divd.nl/people/{{ r | uri_escape }}/'>{{ r }}</a>
 								{% else %}
 									{{ r }}
 								{% endif %}
@@ -83,7 +83,7 @@ layout: default
 				<td> Page author </td>
 				<td>
 					{% if team contains page.author %}
-						<a href='https://www.divd.nl/team/{{ page.author | uri_escape }}/'>{{ page.author }}</a>
+						<a href='https://www.divd.nl/people/{{ page.author | uri_escape }}/'>{{ page.author }}</a>
 					{% else %}
 						{{ page.author }}
 					{% endif %}
