--- a/_layouts/cve.html
+++ b/_layouts/cve.html
@@ -99,7 +99,7 @@ layout: default
 				Last modified
 			</td>
 			<td>
-				{{ page.last_modified_at | date: "%d %b %Y %H:%M"}}
+				{{ page.last_modified_at | date: "%d %b %Y %H:%M %Z"}}
 			</td>
 		</tr>
 	</tbody>
