Squashing commit for iocharger (#904)
* Don't build unless on right repo

* First draft of advisory

* Added CVE records and update case file

* Added blogpost

* Update _cases/2024/DIVD-2024-00035.md

Co-authored-by: Wilco <wilcovanbeijnum@gmail.com>

* Update _cases/2024/DIVD-2024-00035.md

Co-authored-by: Wilco <wilcovanbeijnum@gmail.com>

* Update for limited disclosure 9-1-2025

* Mind the spelling of Iocharger

* Update _data/cves/2024/CVE-2024-43656.json

Co-authored-by: Wilco <wilcovanbeijnum@gmail.com>

* Fix grammar and spelling

* Fix grammar and spelling of post

* Fix grammar and spelling in case

* Fix weird white spaces

* Update _data/cves/2024/CVE-2024-43652.json

Co-authored-by: Wilco <wilcovanbeijnum@gmail.com>

* Fixes based on review of Wilco

* Polished CVE records with CVSS clarification for the NVD.

* Fix list of CVEs

* Fixed CVE record

* Update _cases/2024/DIVD-2024-00035.md

Co-authored-by: Wilco <wilcovanbeijnum@gmail.com>

* Update _cases/2024/DIVD-2024-00035.md

Co-authored-by: Wilco <wilcovanbeijnum@gmail.com>

* Update _cases/2024/DIVD-2024-00035.md

Co-authored-by: Wilco <wilcovanbeijnum@gmail.com>

* Fixing comment of Wilco

* Update _cases/2024/DIVD-2024-00035.md

Co-authored-by: Wilco <wilcovanbeijnum@gmail.com>

* Update _cases/2024/DIVD-2024-00035.md

Co-authored-by: Wilco <wilcovanbeijnum@gmail.com>

* Fix typos in CVSS clarification

* Fixed Harm's name

* Update _cases/2024/DIVD-2024-00035.md

Co-authored-by: Stan Plasmeijer <111912052+JstRelax@users.noreply.github.com>

---------

Co-authored-by: Wilco <wilcovanbeijnum@gmail.com>
Co-authored-by: Stan Plasmeijer <111912052+JstRelax@users.noreply.github.com>

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -59,8 +59,8 @@ section, summary, time, mark, audio, video {
   margin: 0;
   padding: 0;
   border: 0;
-  font-size: 100%;
   font: inherit;
+  font-size: 100%;
   vertical-align: baseline; }
 
 article, aside, details, figcaption, figure,
@@ -2902,6 +2902,10 @@ table.affected th {
     {
         display: none !important;
     }
+
+    body {
+      padding-top: 0;
+    }
 }
 
 .hidden {
@@ -2912,3 +2916,10 @@ table.affected th {
   background-color: #1e6bb8;  
   background-color: rgba(102, 102, 255, 0.49);  
 }
+
+@media print {
+  div {
+    font-style: italic;
+  }
+
+  }
